src/objects/Transaction_Limit__c/Transaction_Limit__c.object-meta.xml
<CustomObject>
    <label>Transaction Limit</label>
    <nameField>
        <label>Transaction Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>