src/objects/Transaction_Limit__c/fields/Maximum_Debit_Allowed_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Debit_Allowed_Per_Transaction__c</fullName>
    <label>Maximum Debit Allowed Per Transaction</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>