src/objects/Transaction_Limit__c/fields/Maximum_Transaction_Allowed_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Transaction_Allowed_Per_Day__c</fullName>
    <label>Maximum Transaction Allowed Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>