src/objects/Transaction_Limit__c/fields/Maximum_Transaction_Allowed_Per_Mon__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Transaction_Allowed_Per_Mon__c</fullName>
    <label>Maximum Transaction Allowed Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>